AM_CXXFLAGS = -Wall -g

lib_LIBRARIES = libfanmerc.a

libfanmerc_a_SOURCES = \
	Character.cc \
	GlobalState.cc \
	Item.cc \
	Shop.cc \
	Team.cc \
	Town.cc \
	XMLParser.cc

include_HEADERS = \
	Character.hh \
	Character.icc \
	FanmercDefs.hh \
	GlobalState.hh \
	GlobalState.icc \
	Item.hh \
	Item.icc \
	Shop.hh \
	Shop.icc \
	Team.hh \
	Team.icc \
	Town.hh \
	XMLParser.hh
